Added some secrets

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,9 @@ packages/Pathoschild.Stardew.ModBuildConfig.3.2.2/build/SMAPI.Toolkit.CoreInterf
 packages/Pathoschild.Stardew.ModBuildConfig.3.2.2/build/SMAPI.Toolkit.dll
 packages/Pathoschild.Stardew.ModBuildConfig.3.2.2/images/icon.png
 packages/Pathoschild.Stardew.ModBuildConfig.3.2.2/Pathoschild.Stardew.ModBuildConfig.3.2.2.nupkg
+LetMeRest/bin/Debug/LetMeRest 1.0.0.zip
+LetMeRest/bin/Debug/LetMeRest.dll
+LetMeRest/bin/Debug/LetMeRest.pdb
+LetMeRest/obj/Debug/LetMeRest.csproj.FileListAbsolute.txt
+LetMeRest/obj/Debug/LetMeRest.dll
+LetMeRest/obj/Debug/LetMeRest.pdb
