--- a/LetMeRest/LetMeRest.csproj
+++ b/LetMeRest/LetMeRest.csproj
@@ -54,6 +54,7 @@
     <Compile Include="ModEntry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Data.cs" />
+    <Compile Include="Secrets.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="config.json" />
