--- a/LetMeRest/config.json
+++ b/LetMeRest/config.json
@@ -1,3 +1,7 @@
 ﻿{
-	"Multiplier": 1
+	"Multiplier": 1,
+	"SittingVerification": true,
+	"RidingVerification": true,
+	"StandingVerification": true,
+	"SecretsVerification": true
 }
