--- a/LetMeRest/LetMeRest.csproj
+++ b/LetMeRest/LetMeRest.csproj
@@ -48,16 +48,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AmbientInformation.cs" />
-    <Compile Include="DataBase.cs" />
+    <Compile Include="Framework\Lists\AmbientInformation.cs" />
+    <Compile Include="Framework\Lists\Buffs.cs" />
+    <Compile Include="Framework\Common\Check.cs" />
+    <Compile Include="Framework\Common\Commands.cs" />
+    <Compile Include="Framework\Lists\DataBase.cs" />
+    <Compile Include="Framework\Multiplayer\NetController.cs" />
+    <Compile Include="Framework\Common\Status.cs" />
     <Compile Include="ModConfig.cs" />
     <Compile Include="ModEntry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Data.cs" />
-    <Compile Include="Secrets.cs" />
+    <Compile Include="Framework\Lists\Secrets.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="config.json" />
     <None Include="manifest.json" />
     <None Include="packages.config" />
   </ItemGroup>
